refactor: change table into div

--- a/index.html
+++ b/index.html
@@ -7,91 +7,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <table border="2" align="center">
-        <thead>
-            <tr>
-                <th bgcolor="white" width="50" height="50"></th>
-                <th bgcolor="black" width="50" height="50"></th>
-                <th bgcolor="white" width="50" height="50"></th>
-                <th bgcolor="black" width="50" height="50"></th>
-                <th bgcolor="white" width="50" height="50"></th>
-                <th bgcolor="black" width="50" height="50"></th>
-                <th bgcolor="white" width="50" height="50"></th>
-                <th bgcolor="black" width="50" height="50"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr width="50" height="50">
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-            </tr>
-            <tr width="50" height="50">
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-            </tr>
-            <tr width="50" height="50">
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-            </tr>
-            <tr width="50" height="50">
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-            </tr>
-            <tr width="50" height="50">
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-            </tr>
-            <tr width="50" height="50">
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-            </tr>
-            <tr width="50" height="50">
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-                <td bgcolor="black"></td>
-                <td bgcolor="white"></td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="pinggir-papan">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+        <div class="baris">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+            <div class="kolom"></div class="kolom">
+        </div class="baris">
+    </div>
 </body>
 </html>
