--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="taks html 2: membuat papan catur" content="">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="pinggir-papan">
